updated reg-apps/CMakeLists.txt to link with cudart static lib

--- a/reg-apps/CMakeLists.txt
+++ b/reg-apps/CMakeLists.txt
@@ -18,11 +18,18 @@ add_executable(reg_jacobian reg_jacobian.cpp)
 target_link_libraries(reg_jacobian _reg_resampling _reg_localTransformation _reg_tools _reg_globalTransformation _reg_ReadWriteImage)
 #-----------------------------------------------------------------------------
 if(USE_CUDA)
-        cuda_add_executable(reg_f3d reg_f3d.cpp)
+  if(UNIX)
+    add_executable(reg_f3d reg_f3d.cpp)
+    find_library(CUDART_LIBRARY cudart_static ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
+    target_link_libraries(reg_f3d _reg_f3d ${CUDART_LIBRARY} cuda pthread dl rt)
+  else(UNIX)
+          cuda_add_executable(reg_f3d reg_f3d.cpp)
+          target_link_libraries(reg_f3d _reg_f3d ${CUDA_CUDA_LIBRARY})
+  endif(UNIX)
 else(USE_CUDA)
         add_executable(reg_f3d reg_f3d.cpp)
+	target_link_libraries(reg_f3d _reg_f3d)
 endif(USE_CUDA)
-target_link_libraries(reg_f3d _reg_f3d)
 #-----------------------------------------------------------------------------
 if(USE_CUDA)
         cuda_add_executable(reg_aladin reg_aladin.cpp)
